[package]
name = "land-protocol"
version = "0.1.0"
edition = "2021"
authors = ["LaRuche Team"]
license = "MIT OR Apache-2.0"
description = "LAND (Local AI Network Discovery) Protocol - Core Library"
repository = "https://github.com/infinition/land-protocol"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
blake3 = "1"
rand = "0.8"
base64 = "0.22"
local-ip-address = "0.6"
